templates/istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: istio-ingressgateway
    app.kubernetes.io/name: istio-ingressgateway
  name: istio-ingressgateway
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: ISTIO_DOMAIN
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: 80
            path: /
  tls:
    - hosts:
        - ISTIO_DOMAIN
      secretName: istio-ingressgateway-tls
