templates/istio/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingressgateway
  namespace: NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: ISTIO_DOMAIN
      http:
        paths:
          - backend:
              serviceName: istio-ingressgateway
              servicePort: http
  tls:
    - hosts:
        - ISTIO_DOMAIN
      secretName: istio-ingressgateway-tls
