templates/istio/vs-grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-grafana
  namespace: istio-system
spec:
  hosts:
    - ISTIO_DOMAIN
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - match:
        - uri:
            prefix: /grafana
      route:
        - destination:
            host: grafana
            port:
              number: 3000
