templates/istio/vs-kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-kiali
  namespace: istio-system
spec:
  hosts:
    - ISTIO_DOMAIN
  gateways:
    - istio-system/istio-autogenerated-k8s-ingress
  http:
    - match:
        - uri:
            prefix: /kiali
      route:
        - destination:
            host: kiali
            port:
              number: 20001
